# playground-series-s6e3

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_predict_customer_churn.ipynb
