[project]
name = "playground-series-s6e3"
version = "0.1.0"
description = "Kaggle playground series project predicting customer churn."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=7.3.0",
    "kagglehub>=1.0.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "optuna>=4.9.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
